logs/younet-rnd-infrastructure.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/younet_rnd_infrastructure'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/__init__.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/__init__.py", line 2
    print '*-*-' * 20
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri'...
Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/common'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/common/utils.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/common/utils.py", line 181
    print x+y
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook/facebook_url_tool.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook/facebook_url_tool.py", line 200
    print utils.time_measure(get_fbid_from_one_url,
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit'...
Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/basic_info'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/basic_info/basic_info.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/basic_info/basic_info.py", line 54
    print 'Exception with batch: %s' % batch
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/get_list_followers'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/get_list_followers/get_list_followers.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/get_list_followers/get_list_followers.py", line 87
    print 'next'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/get_list_friends'...
Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/facebook_crawl_unit/interactive_info'...
Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/find_place'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/find_place/find_place.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/find_place/find_place.py", line 35
    print 'Retry: %s-th' % number_time_retry
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/machine_learning'...
Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/machine_learning/preprocessing'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/machine_learning/preprocessing/preprocessor.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/machine_learning/preprocessing/preprocessor.py", line 78
    print '\n\n\n\n\n\n'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/network'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/network/send_email.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/network/send_email.py", line 49
    print 'Email sent!'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/solr'...
Compiling './lib/python3.5/site-packages/younet_rnd_infrastructure/tri/solr/solr.py'...
***   File "./lib/python3.5/site-packages/younet_rnd_infrastructure/tri/solr/solr.py", line 117
    print build_solr_request('19709', 'id_table,id_source', sorl_filter.build_filter())
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/younet_rnd_infrastructure-1.0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
